<resources>
    <string name="app_name">Geeniz</string>
    <string name="facebook_app_id">1809330109343316</string>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="Settings">Settings</string>
    <string name="Search_Services">Search Services</string>
    <string name="Offer_services">Offer services</string>
    <string name="Log_in">Log in</string>
    <string name="Sign_up">Sign up</string>
    <string name="Forgot_password">Forgot password ?</string>
    <string name="Email_Address_asterisk">Email Address*</string>
    <string name="Email_Address">Email Address</string>
    <string name="Password_asterisk">Password*</string>
    <string name="Re_password_asterisk">Re-Password*</string>
    <string name="Search">Search</string>
    <string name="Ployer">Ployer</string>
    <string name="First_Name_asterisk">First Name*</string>
    <string name="Last_Name_asterisk">Last Name*</string>
    <string name="Birthday_asterisk">Birthday*</string>
    <string name="Create_Account">Create Account</string>
    <string name="Ployee">Ployee</string>
    <string name="Geeniz">GEENIZ</string>
    <string name="Reset">Reset</string>
    <string name="Say_something_about_experience_you_have_in_this_service_category">Say something abbout experience you have in this service category</string>
    <string name="Description">Description</string>
    <string name="Describe_certificate_or_diploma_related_to_the_service_you_want_to_provide">Describe certificate or diploma related to the service you want to provide</string>
    <string name="Certificate">Certificate</string>
    <string name="Equipment_needed">Equipment needed</string>
    <string name="Describe_equipment_and_tools_that_you_can_provide_to_ployer">Describe equipment and tools that you can provide to Ployer</string>
    <string name="Name_of_service_you_offer">Name of service you offer</string>
    <string name="Services">Services</string>
    <string name="Start">Start</string>
    <string name="From">From($)</string>
    <string name="To">To($)</string>
    <string name="Aide_au_senior">Aide au senior</string>
    <string name="Service">Service</string>
    <string name="Done">Done</string>
    <string name="No_preferences">No preferences</string>
    <string name="Holiday_mode">Holiday mode</string>
    <string name="Temporary_remove_Provider_section_offline">Temporary remove Provider section offline</string>
    <string name="This_field_is_required">This field is required</string>
    <string name="Password_does_not_match_the_confirm_password">Password does not match the confirm password.</string>
    <string name="Loading">Loading</string>
    <string name="Because_we_encrypt_your_password">Because we encrypt your password we can’t send it to you but we can reset it allowing you to change it.</string>
    <string name="New_password">New Password</string>
    <string name="re_confirm_Password">re-confirm Password</string>
    <string name="Birthday">Birthday</string>
    <string name="If_you_are_offering_a_service_your_email_and_or_phone_number_will_be_available_to_other_members_as_means_to_contact_you">*If you are oﬀering a service. Your email and/or phone number will be available to other members as means to contact you</string>
    <string name="Phone_asterisk">Phone*</string>
    <string name="Change_password">Change password</string>
    <string name="Please_select_your_country_and_enter_your_phone_number">Please select your country and enter your phone number</string>
    <string name="Phone_number">Phone number</string>
    <string name="Account">Account</string>
    <string name="Phone">Phone</string>
    <string name="About_me">About me</string>
    <string name="Education">Education</string>
    <string name="Work">Work</string>
    <string name="Interest">Interest</string>
    <string name="Language">Language</string>
    <string name="Contact_method">Contact method</string>
    <string name="Show_Phone_No">Show Phone No.</string>
    <string name="Show_Email">Show Email</string>
    <string name="Transport">Transport</string>
    <string name="Let_others_see_who_they_are_talking_to_you_can_upload_up_to_3_photos">Let others see who they are talking to. You can upload up to 3 photos</string>
    <string name="By_signing_up_i_agree_to_ploy_s_term_of_service_and_privacy_policy">By signing up,I agree to PLOY\'s term of service, and Privacy Policy</string>
    <string name="Invalid_email_address">Invalid email address</string>
    <string name="Password_reset">Password reset</string>
    <string name="Log_out">Log out</string>
    <string name="Delete_account">Delete Account</string>

    <string name="Availability">Availability</string>
    <string name="Profile">Profile</string>
    <string name="Upload_photo">Upload photo</string>
    <string name="Language_spoken">Language spoken</string>
    <string name="FAQ">FAQ</string>
    <string name="Legal">Legal</string>
    <string name="Term_and_Conditions">Terms&amp;Conditions</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="What_is_Ployee">What is Ployee</string>
    <string name="What_is_Ployer">What is Ployer</string>
    <string name="Sign_up_with_facebook">Sign up with facebook</string>
    <string name="My_Location">My Location</string>
    <string name="PLOYEE">PLOYEE</string>
    <string name="Language_setting">Language setting</string>
    <string name="Switch_to_Ployer">Switch to Ployer</string>
    <string name="Email">Email</string>
    <string name="Localization">Localization</string>
    <string name="Overall">Overall</string>
    <string name="Competence">Competence</string>
    <string name="Punctuality">Punctuality</string>
    <string name="Politeness">Politeness</string>
    <string name="Professionalism">Professionalism</string>
    <string name="Leave_a_review">Leave a review</string>
    <string name="Review">Review</string>
    <string name="Reviews">Reviews</string>
    <string name="Tell_others_about_this_person">Tell others about this person</string>
    <string name="Filter">Filter</string>
    <string name="Clear">Clear</string>
    <string name="Rating">Rating</string>
    <string name="By_default_your_contact_information_is_not">*By default, your contact information is not shown to others. You can choose to show them in Profile Setting</string>
    <string name="Login_or_Signup">Login / Signup</string>
    <string name="Find_Services">Find Services</string>
    <string name="Need_Service">Need Service ?</string>
    <string name="Close">Close</string>
    <string name="Introduction">Introduction</string>
    <string name="Preview">Preview</string>
    <string name="Location_not_found">Location not found</string>

</resources>
