<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/view_main_appbar" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_filter_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_gray_32dp"
                android:gravity="center_vertical"
                android:minHeight="?attr/listPreferredItemHeightSmall"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:text="@string/Services"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <include layout="@layout/view_vertical_divider" />

            <TextView
                android:id="@+id/textview_filter_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_gray_32dp"
                android:gravity="center_vertical"
                android:minHeight="?attr/listPreferredItemHeightSmall"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:text="@string/Availability"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <include layout="@layout/view_vertical_divider" />

            <TextView
                android:id="@+id/textview_filter_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableRight="@drawable/ic_chevron_right_gray_32dp"
                android:gravity="center_vertical"
                android:minHeight="?attr/listPreferredItemHeightSmall"
                android:paddingLeft="16dp"
                android:paddingRight="8dp"
                android:text="@string/Language"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <include layout="@layout/view_vertical_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_filter_contact_method_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/Contact_method" />

                <android.support.v7.widget.ButtonBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_filter_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/selector_drawable_phone_gray_white"
                        android:text="@string/Phone"
                        android:textAllCaps="false"
                        android:textColor="@color/selector_color_gray_white"
                        app:backgroundTint="@color/selector_color_white_blue" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_filter_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:drawableLeft="@drawable/selector_drawable_email_gray_white"
                        android:text="@string/Email"
                        android:textAllCaps="false"
                        android:textColor="@color/selector_color_gray_white"
                        app:backgroundTint="@color/selector_color_white_blue" />

                </android.support.v7.widget.ButtonBarLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edittext_filter_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="left"
                    android:hint="@string/From"
                    android:inputType="number"
                    android:maxWidth="80dp"
                    android:minWidth="60dp"
                    android:paddingRight="8dp"
                    android:text="0"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/From" />

                <TextView
                    android:id="@+id/textview_filter_price_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    tools:text="Price/Hour" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edittext_filter_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="right"
                    android:hint="@string/To"
                    android:inputType="number"
                    android:maxWidth="80dp"
                    android:minWidth="60dp"
                    android:paddingRight="8dp"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelAlwaysShown="true"
                    app:met_floatingLabelText="@string/To" />


            </LinearLayout>

            <com.appyvet.rangebar.RangeBar
                android:id="@+id/materialrangebar_filter_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rangeBarPaddingBottom="8dp"
                app:tickEnd="1000"
                app:tickInterval="5"
                app:tickStart="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_filter_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/Rating" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_filter_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_filter_transport_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/Transport" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_filter_transportation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_filter_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/Filter"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white" />

            <include layout="@layout/view_horizontal_divider" />

            <Button
                android:id="@+id/button_filter_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/Clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>