<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_main_appbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/Please_select_your_country_and_enter_your_phone_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:id="@+id/textview_ployee_account_phone_description" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/textview_ployee_account_phone_label"
            android:layout_height="wrap_content"
            android:text="@string/Phone_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countrycodepicker_ployee_account_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:defaultNameCode="FR" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edittext_ployee_account_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone"
                android:inputType="phone"
                app:met_baseColor="@android:color/white"
                app:met_helperTextColor="@color/colorPrimary"
                app:met_primaryColor="@color/colorPrimary"
                app:met_textColor="@android:color/black"
                app:met_textColorHint="@color/colorPrimary"
                app:met_underlineColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>