<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_color_primary"
    android:orientation="vertical">

    <include layout="@layout/view_main_appbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_geniz_logo_133dp"
                android:tint="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_signup_signin"
                style="@style/PloyButtonTransparentWhiteBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/Log_in"
                android:textAllCaps="false" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_signup_signup"
                style="@style/PloyButtonTransparentWhiteBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Sign_up"
                android:textAllCaps="false" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginbutton_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/Sign_up_with_facebook"
                facebook:com_facebook_login_text="@string/Sign_up_with_facebook" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>